--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                 <td>3.00€</td>
                             </tr>
                             <tr>
-                                <td><img id="slikaPijace" src="Slike/ledenicaj.jpg"
+                                <td><img id="slikaPijace" src="Slike/ledeniCaj.jpg"
                                         alt="Slika je simbolična"></td>
                                 <td>Studena ledeni čaj</td>
                                 <td>0.3l</td>
