--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                 <div class="oval-box">
                     <div class="content">
                         <p class="text">
-                            Na idilični lokaciji oddaljeni samo 10 minut iz Maribora vas pričakuje Turistična kmetija
-                            Kovačič,
-                            kjer se tradicija prepleta z užitki. Okusite domače narezke,
-                            meso iz tunke in čudovita domača vina, kot sta Renski in Laški rizling.
+                            Na idilični lokaciji oddaljeni samo 10 minut iz Maribora
+                            vas pričakuje Turistična kmetija Kovačič,
+                            kjer se tradicija prepleta z užitki.
+                            Okusite domače narezke,
+                            meso iz tunke in čudovita domača vina, 
+                            kot sta Renski in Laški rizling.
                             Pri nas lahko organizirate zaključne družbe,
                             piknike in srečanja. Odkrijte čare našega posestva,
                             kjer lahko stopite v svet elegantnih konj in neokrnjene narave.
